--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
     "test:unit:ui": "vitest --ui",
-    "test:e2e": "playwright test",
+    "test:e2e": "npm run test:e2e:cucumber",
+    "test:e2e:cucumber": "cucumber-js tests/e2e/features/**/*.feature",
+    "test:e2e:playwright": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
@@ -58,6 +60,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.8.0",
     "tailwindcss": "^4.1.18",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vitest": "^4.0.17"
