--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:unit:watch": "vitest",
     "test:unit:ui": "vitest --ui",
     "test:e2e": "npm run test:e2e:cucumber",
+    "test:e2e:prod": "TEST_PROD=true npm run test:e2e:cucumber",
     "test:e2e:cucumber": "cucumber-js tests/e2e/features/**/*.feature",
     "test:e2e:playwright": "playwright test",
     "test:e2e:ui": "playwright test --ui",
