--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "dependencies": {
     "i18next": "^25.7.4",
-    "i18next-browser-languagedetector": "^8.2.0"
+    "i18next-browser-languagedetector": "^8.2.0",
+    "lit-html": "^3.3.2"
   }
 }
