--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@vitest/ui": "^4.0.17",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
+    "eslint-plugin-i18next": "^6.1.3",
     "husky": "^9.1.7",
     "jsdom": "^27.4.0",
     "lint-staged": "^16.2.7",
