--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:e2e:ui": "playwright test --ui",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "check:i18n": "node scripts/check-translation-coverage.js",
     "format": "prettier --write \"src/**/*.{ts,tsx,css,html}\" || true",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css,html}\" || true",
     "prepare": "husky"
@@ -56,7 +57,6 @@
     "@vitest/ui": "^4.0.17",
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.2",
-    "eslint-plugin-i18next": "^6.1.3",
     "husky": "^9.1.7",
     "jsdom": "^27.4.0",
     "lint-staged": "^16.2.7",
