fix: Update CI workflow to use production e2e tests
- Change from 'npm run test:e2e' to 'npm run test:e2e:prod'
- This ensures build happens before e2e tests in CI
- Removes redundant separate 'Build' step (now part of test:e2e:prod)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,11 +53,8 @@ jobs:
         if: hashFiles('tests/e2e/**/*.ts') != ''
         run: npx playwright install --with-deps
 
-      - name: Run E2E tests
-        run: npm run test:e2e
-
-      - name: Build
-        run: npm run build
+      - name: Build and Run E2E tests
+        run: npm run test:e2e:prod
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
