--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:unit:watch": "vitest",
     "test:unit:ui": "vitest --ui",
     "test:e2e": "npm run test:e2e:cucumber",
+    "test:e2e:current": "cucumber-js tests/e2e/features/**/*.feature --tags \"@current\"",
     "test:e2e:prod": "npm run build && TEST_PROD=true npm run test:e2e:cucumber",
     "test:e2e:cucumber": "cucumber-js tests/e2e/features/**/*.feature",
     "test:e2e:playwright": "playwright test",
