fix: implement robust coordination file cleanup for parallel e2e tests
PROBLEM:
Failed test runs left orphaned .test-server-port and .test-worker-count files,
causing subsequent test runs to fail with ERR_CONNECTION_REFUSED errors.

SOLUTION (Defense in Depth):
Implemented two-layer cleanup strategy following Dave Farley principles:

Layer 1 - NPM Script Pre-hooks:
- Added test:e2e:clean script to remove coordination files
- Modified all test:e2e* scripts to run cleanup BEFORE execution
- Added posttest hooks to cleanup AFTER execution
- Ensures cleanup even if tests crash or are killed

Layer 2 - Runtime Stale Detection:
- Added STALE_THRESHOLD_MS (60 seconds) constant
- Implemented isFileStale() to check file age via mtimeMs
- Added isCoordinationStateStale() to detect old coordination files
- Added clearCoordinationState() to safely remove stale files
- BeforeAll now checks for stale state BEFORE worker registration

RULE ENFORCEMENT:
- Created Rule #11 in .cline/rules/testing.md
- E2E tests MUST use npm scripts (npm run test:e2e*)
- NEVER call cucumber-js directly (bypasses cleanup hooks)
- Rule is ABSOLUTE and NON-NEGOTIABLE

FILES MODIFIED:
- package.json: Added cleanup scripts and pre/post hooks
- tests/e2e/support/port-manager.ts: Stale detection functions
- tests/e2e/support/hooks.ts: BeforeAll stale state check
- .cline/rules/testing.md: Rule #11 enforcement

VERIFICATION:
✅ All 1316 test steps passed
✅ Pre-hook cleanup executed successfully
✅ Post-hook cleanup executed successfully
✅ 6 parallel workers coordinated properly

This ensures CI/CD reliability and prevents test pollution from failed runs.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
     "test:unit:ui": "vitest --ui",
-    "test:e2e": "npm run test:e2e:cucumber",
-    "test:e2e:current": "cucumber-js tests/e2e/features/**/*.feature --tags \"@current\"",
-    "test:e2e:prod": "npm run build && TEST_PROD=true npm run test:e2e:cucumber",
+    "test:e2e:clean": "rm -f .test-server-port .test-worker-count",
+    "test:e2e": "npm run test:e2e:clean && npm run test:e2e:cucumber",
+    "test:e2e:current": "npm run test:e2e:clean && cucumber-js tests/e2e/features/**/*.feature --tags \"@current\"",
+    "test:e2e:prod": "npm run test:e2e:clean && npm run build && TEST_PROD=true npm run test:e2e:cucumber",
     "test:e2e:cucumber": "cucumber-js tests/e2e/features/**/*.feature",
+    "posttest:e2e": "npm run test:e2e:clean",
+    "posttest:e2e:current": "npm run test:e2e:clean",
+    "posttest:e2e:prod": "npm run test:e2e:clean",
     "test:e2e:playwright": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "lint": "eslint . --ext .ts,.tsx",
