--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
     "test:unit:ui": "vitest --ui",
-    "test:e2e:clean": "rm -f .test-server-port .test-worker-count",
-    "test:e2e": "npm run test:e2e:clean && npm run test:e2e:cucumber",
-    "test:e2e:current": "npm run test:e2e:clean && cucumber-js tests/e2e/features/**/*.feature --tags \"@current\"",
-    "test:e2e:prod": "npm run test:e2e:clean && npm run build && TEST_PROD=true npm run test:e2e:cucumber",
-    "test:e2e:cucumber": "cucumber-js tests/e2e/features/**/*.feature",
-    "posttest:e2e": "npm run test:e2e:clean",
-    "posttest:e2e:current": "npm run test:e2e:clean",
-    "posttest:e2e:prod": "npm run test:e2e:clean",
+    "test:e2e:server": "vite --port 3000",
+    "test:e2e:server:prod": "vite preview --port 4173",
+    "test:e2e": "concurrently -k -s first \"npm:test:e2e:server\" \"npm:test:e2e:run\"",
+    "test:e2e:run": "wait-on http://localhost:3000 && cucumber-js tests/e2e/features/**/*.feature",
+    "test:e2e:current": "concurrently -k -s first \"npm:test:e2e:server\" \"wait-on http://localhost:3000 && cucumber-js tests/e2e/features/**/*.feature --tags '@current'\"",
+    "test:e2e:prod": "npm run build && concurrently -k -s first \"npm:test:e2e:server:prod\" \"wait-on http://localhost:4173 && TEST_PROD=true cucumber-js tests/e2e/features/**/*.feature\"",
     "test:e2e:playwright": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "lint": "eslint . --ext .ts,.tsx",
@@ -61,6 +59,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/ui": "^4.0.18",
     "autoprefixer": "^10.4.23",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.2",
     "husky": "^9.1.7",
     "jsdom": "^27.4.0",
@@ -71,7 +70,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "wait-on": "^9.0.3"
   },
   "dependencies": {
     "i18next": "^25.8.0",
