chore: Add Stryker Mutator configuration for mutation testing
- Added stryker.config.js with settings for mutation testing
- Configured to test src/components, utils, storage, and services
- Using command runner with 'npm test' to run both unit and E2E tests
- Set timeout to 60s and concurrency to 1 to avoid hangs
- Updated .gitignore to exclude mutation test artifacts
- Added Stryker dependencies to package.json

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ test-output.txt
 .test-server-port
 .test-worker-count
 coverage
+
+# Stryker mutation testing
+stryker-tmp/
+reports/
+.stryker-tmp/
+mutation-test.log
