--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview",
     "kill": "pkill -9 -f vite || true",
     "test": "npm run test:unit && npm run test:e2e",
+    "test:mutation": "stryker run",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
     "test:unit:ui": "vitest --ui",
     "test:e2e:server": "vite --port 3000",
     "test:e2e:server:prod": "vite preview --port 4173",
-    "test:e2e": "concurrently -k -s first \"npm:test:e2e:server\" \"npm:test:e2e:run\"",
+    "test:e2e": "concurrently --raw -k -s first \"npm:test:e2e:server\" \"npm:test:e2e:run\"",
     "test:e2e:run": "wait-on http://localhost:3000 && cucumber-js tests/e2e/features/**/*.feature",
-    "test:e2e:current": "concurrently -k -s first \"npm:test:e2e:server\" \"wait-on http://localhost:3000 && cucumber-js tests/e2e/features/**/*.feature --tags '@current'\"",
-    "test:e2e:prod": "npm run build && concurrently -k -s first \"npm:test:e2e:server:prod\" \"wait-on http://localhost:4173 && TEST_PROD=true cucumber-js tests/e2e/features/**/*.feature\"",
+    "test:e2e:current": "concurrently --raw -k -s first \"npm:test:e2e:server\" \"wait-on http://localhost:3000 && cucumber-js tests/e2e/features/**/*.feature --tags '@current'\"",
+    "test:e2e:prod": "npm run build && concurrently --raw -k -s first \"npm:test:e2e:server:prod\" \"wait-on http://localhost:4173 && TEST_PROD=true cucumber-js tests/e2e/features/**/*.feature\"",
     "test:e2e:playwright": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "lint": "eslint . --ext .ts,.tsx",
@@ -50,6 +51,8 @@
   "devDependencies": {
     "@cucumber/cucumber": "^12.6.0",
     "@playwright/test": "^1.58.0",
+    "@stryker-mutator/core": "^9.4.0",
+    "@stryker-mutator/typescript-checker": "^9.4.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/user-event": "^14.6.1",
