refactor: Phase 4 - Container Component Refactoring
✅ Created CollectionBehavior helper to eliminate container duplication
- Extracted createAddHandler<T>() for add operations (8 methods → 1)
- Extracted createItemInstances<T>() for item mapping (11 sites → 1)
- Extracted renderAddButton() for consistent button rendering (8 → 1)
- Extracted renderEmptyState() for empty state handling (8 → 1)
- Added renderCollection() combined helper

✅ Refactored all 5 container components:
- Abilities.ts: 112 → 69 lines (-43, 38% reduction)
- SpecialAbilities.ts: 115 → 67 lines (-48, 42% reduction)
- Attacks.ts: 128 → 87 lines (-41, 32% reduction)
- CyphersBox.ts: 107 → 75 lines (-32, 30% reduction)
- ItemsBox.ts: 246 → 154 lines (-92, 37% reduction)

Total: 256 lines eliminated, 35% reduction in container code

✅ Supports both update patterns:
- Callback-based (Abilities, Attacks, SpecialAbilities)
- Event-based (CyphersBox, ItemsBox)

✅ Zero breaking changes:
- All 303 unit tests passing
- All 317 E2E scenarios passing (2090 steps)

🔧 Fixed CI/CD issues:
- Removed '|| true' from format commands (was hiding failures)
- Optimized pre-commit hook (removed E2E, ~4min faster)
- lint-staged already handles formatting on staged files

Benefits:
- DRY principle: Fix bugs once instead of 8 times
- Consistency: All containers behave identically
- Type safety: Generic helpers work with any item type
- Easy to extend: Adding new collections is now trivial

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "check:i18n": "node scripts/check-translation-coverage.js",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css,html}\" || true",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,html}\" || true",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,html}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css,html}\"",
     "prepare": "husky"
   },
   "lint-staged": {
