--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix",
+      "eslint --fix --max-warnings=-1",
       "prettier --write"
     ],
     "*.{css,html,json,md}": [
