test(conflict): add unit tests for conflict detection infrastructure
Replace @wip E2E scenarios with comprehensive unit tests for ConflictDetectionService and ConflictWarningModal.

Changes:
- Delete 4 @wip Multi-Tab Conflict Detection scenarios (BroadcastChannel cannot work across Playwright contexts)
- Add 23 unit tests for ConflictDetectionService (dirty state, ETag management, conflict detection)
- Add 28 unit tests for ConflictWarningModal (conflict modal, newer version banner, UI states)
- Fix ESLint unused variable warnings in conflict detection code
- Restructure conflict i18n keys to nested format for ARIA labels

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "test:unit:ui": "vitest --ui",
     "test:e2e:server": "vite --port 3000",
     "test:e2e:server:prod": "vite preview --port 4173",
-    "test:e2e": "concurrently --raw -k -s first \"npm:test:e2e:server\" \"npm:test:e2e:run\"",
-    "test:e2e:run": "wait-on http://localhost:3000 && cucumber-js tests/e2e/features/**/*.feature",
+    "test:e2e": "concurrently --raw -k -s first -P \"npm:test:e2e:server\" \"wait-on http://localhost:3000 && cucumber-js {@}\" --",
     "test:e2e:current": "concurrently --raw -k -s first \"npm:test:e2e:server\" \"wait-on http://localhost:3000 && cucumber-js tests/e2e/features/**/*.feature --tags '@current'\"",
     "test:e2e:prod": "npm run build && concurrently --raw -k -s first \"npm:test:e2e:server:prod\" \"wait-on http://localhost:4173 && TEST_PROD=true cucumber-js tests/e2e/features/**/*.feature\"",
     "test:e2e:playwright": "playwright test",
